Bug 1745308 - Only warn once if ClientWaitSync cannot return availability. r=gfx-reviewers,nical

This avoids spamming warnings across IPC that sometimes causes shmem
exhaustion.

Differential Revision: https://phabricator.services.mozilla.com/D133829